# backend_edifai

./: .dockerignore  .env  .env.example  .gitignore  Document.pkl  docker-compose.yml  helpbot.pkl  pyproject.toml
app/: .env  config.py  main.py
app/auth/: service.py
app/auth/router/: router_authorize_user.py  router_register_user.py
app/helpbot/: service.py
app/helpbot/repository/: repository.py
app/helpbot/router/: router_helpbot.py
app/storybot/: service.py
app/storybot/repository/: repository.py
app/storybot/router/: router_generatestory.py
app/wtask2/: service.py
app/wtask2/repository/: repository.py
app/wtask2/router/: router_request.py  router_wtask2.py
static/: Document.pkl
